--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "starter-project",
+  "name": "ingredients",
   "version": "1.0.0",
-  "description": "",
+  "description": "component library",
   "main": "index.js",
   "scripts": {
+    "prestart": "rimraf dist/",
     "start": "npm-run-all -s scss -p server js:dev watch:scss",
     "build": "npm-run-all -s scss js:prod",
     "server": "node tasks/server",
@@ -19,7 +20,8 @@
     "express": "^4.17.1",
     "jsdom": "^15.1.1",
     "node-sass": "^4.12.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
@@ -29,8 +31,11 @@
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "copy-webpack-plugin": "^5.0.4",
+    "html-webpack-plugin": "^3.2.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.2",
+    "pug-loader": "^2.4.0",
+    "rimraf": "^3.0.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9"
   }
