--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/register": "^7.6.0",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
+    "copy-webpack-plugin": "^5.0.4",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.2",
