--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "js:prod": "webpack --colors --display-chunks --display-modules -p",
     "js:dev": "webpack --colors --display-chunks -w",
     "watch:scss": "nodemon -e scss -x \"npm run scss\"",
-    "test": "mocha --reporter nyan --full-trace --require @babel/register './src/**/*spec.js'"
+    "test": "nyc --reporter=text --reporter=html mocha --require @babel/register './src/**/*spec.js'"
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +34,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.2",
+    "nyc": "^15.0.0",
     "pug-loader": "^2.4.0",
     "rimraf": "^3.0.0",
     "webpack": "^4.40.2",
